--- a/rest-with-springboot-and-java-uelisson/src/main/resources/templates/People.jrxml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/templates/People.jrxml
@@ -2,6 +2,11 @@
 <jasperReport name="People" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8b780973-7d18-41c3-9448-ecf3ab9ab3c2">
 	<property name="com.jaspersoft.studio.data.sql.tables" value="cmVzdC13aXRoLXNwcmluZ2Jvb3QtYW5kLWphdmEtdWVsaXNzb24ucGVyc29uIEFTICwxMDIsMTA4&#xa;LDIxMzhlNjE2LTc5ODYtNGU4MC1hNzgxLTliYWM5ZjI3ZGQ0MTs="/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySql Connection"/>
+	<style name="Style1">
+		<conditionalStyle forecolor="#FFFFFF" backcolor="#E0E0E0">
+			<conditionExpression><![CDATA[$V{REPORT_COUNT} % 2 == 0]]></conditionExpression>
+		</conditionalStyle>
+	</style>
 	<query language="SQL"><![CDATA[SELECT 
     id,
     CONCAT(first_name, '', last_name) AS name,
@@ -35,56 +40,56 @@ FROM `rest-with-springboot-and-java-uelisson`.person
 		<property name="com.jaspersoft.studio.field.tree.path" value="person"/>
 	</field>
 	<background splitType="Stretch"/>
-	<title height="81" splitType="Stretch">
+	<title height="84" splitType="Stretch">
 		<element kind="staticText" uuid="ab444555-6548-4978-900c-5915c2fcc944" x="170" y="14" width="350" height="67" fontSize="35.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[Reporte de Pessoas]]></text>
 		</element>
-		<element kind="image" uuid="a81c2bde-8556-44f9-8d50-44b739e26c4f" x="29" y="24" width="140" height="50">
-			<expression><![CDATA["F:/downloads/Tamo tentando Logo.svg"]]></expression>
+		<element kind="image" uuid="67fe7a6a-e7e1-448b-b2ca-4bdaf13ce629" x="10" y="22" width="160" height="50">
+			<expression><![CDATA["F:/downloads/Tamo_tentando_Logo.svg"]]></expression>
 		</element>
 	</title>
 	<pageHeader height="45" splitType="Stretch"/>
 	<columnHeader height="30" splitType="Stretch">
-		<element kind="staticText" uuid="00400ed5-79e3-43db-9107-635e9e7e99ca" x="0" y="0" width="60" height="30" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
+		<element kind="staticText" uuid="00400ed5-79e3-43db-9107-635e9e7e99ca" mode="Opaque" x="0" y="0" width="60" height="30" forecolor="#F5E6E6" backcolor="#B25BED" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[Code]]></text>
 			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="af6b1dbf-9667-455e-8d54-c801cd7b6108"/>
 		</element>
-		<element kind="staticText" uuid="8bb6148b-a657-488b-8c41-e0a3591e709c" x="60" y="0" width="190" height="30" fontName="Arial" bold="true" hTextAlign="Left" vTextAlign="Middle">
+		<element kind="staticText" uuid="8bb6148b-a657-488b-8c41-e0a3591e709c" mode="Opaque" x="60" y="0" width="190" height="30" forecolor="#F5E6E6" backcolor="#B25BED" fontName="Arial" bold="true" hTextAlign="Left" vTextAlign="Middle">
 			<text><![CDATA[Name]]></text>
 			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="94c50232-b82d-4685-8599-1ccbe6b3beeb"/>
 		</element>
-		<element kind="staticText" uuid="eac9132f-d26f-430b-b22a-0b54610bcf19" x="250" y="0" width="150" height="30" fontName="Arial" bold="true" hTextAlign="Left" vTextAlign="Middle">
+		<element kind="staticText" uuid="eac9132f-d26f-430b-b22a-0b54610bcf19" mode="Opaque" x="250" y="0" width="150" height="30" forecolor="#F5E6E6" backcolor="#B25BED" fontName="Arial" bold="true" hTextAlign="Left" vTextAlign="Middle">
 			<text><![CDATA[Address]]></text>
 			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c56a619f-b7e1-4254-8942-6b1c925228a6"/>
 		</element>
-		<element kind="staticText" uuid="2ac5588b-2107-44cb-a75b-e5f1a0a1fe5d" x="500" y="0" width="44" height="30" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
+		<element kind="staticText" uuid="2ac5588b-2107-44cb-a75b-e5f1a0a1fe5d" mode="Opaque" x="500" y="0" width="44" height="30" forecolor="#F5E6E6" backcolor="#B25BED" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[Enabled]]></text>
 			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="59c778fc-8b35-4768-bdcb-e02c0c479180"/>
 		</element>
-		<element kind="staticText" uuid="a2b97c86-3e88-42d7-8f66-d6483d58c960" x="400" y="0" width="100" height="30" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
+		<element kind="staticText" uuid="a2b97c86-3e88-42d7-8f66-d6483d58c960" mode="Opaque" x="400" y="0" width="100" height="30" forecolor="#F5E6E6" backcolor="#B25BED" fontName="Arial" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[Gender]]></text>
 			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bdc98c0f-7be7-464e-a1eb-1835c39d6ba9"/>
 		</element>
 	</columnHeader>
 	<detail>
 		<band height="30" splitType="Stretch">
-			<element kind="textField" uuid="f1a3f6f8-5c0d-466d-9323-d3c762bceadb" x="60" y="0" width="190" height="30" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="textField" uuid="f1a3f6f8-5c0d-466d-9323-d3c762bceadb" mode="Opaque" x="60" y="0" width="190" height="30" forecolor="#1F1B1B" hTextAlign="Left" vTextAlign="Middle" style="Style1">
 				<expression><![CDATA[$F{name}]]></expression>
 				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="94c50232-b82d-4685-8599-1ccbe6b3beeb"/>
 			</element>
-			<element kind="textField" uuid="8c2622b1-a06a-451f-aab0-3f826c80b29b" x="250" y="0" width="150" height="30" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="textField" uuid="8c2622b1-a06a-451f-aab0-3f826c80b29b" mode="Opaque" x="250" y="0" width="150" height="30" forecolor="#1F1B1B" hTextAlign="Left" vTextAlign="Middle" style="Style1">
 				<expression><![CDATA[$F{address}]]></expression>
 				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c56a619f-b7e1-4254-8942-6b1c925228a6"/>
 			</element>
-			<element kind="textField" uuid="ecdd8e1b-5dfc-458c-b508-7c1be10bcfdc" x="400" y="0" width="100" height="30" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="ecdd8e1b-5dfc-458c-b508-7c1be10bcfdc" mode="Opaque" x="400" y="0" width="100" height="30" forecolor="#1F1B1B" hTextAlign="Center" vTextAlign="Middle" style="Style1">
 				<expression><![CDATA[$F{gender}]]></expression>
 				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bdc98c0f-7be7-464e-a1eb-1835c39d6ba9"/>
 			</element>
-			<element kind="textField" uuid="532025b7-e345-4b4f-b7b8-63e396470217" x="500" y="0" width="44" height="30" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="532025b7-e345-4b4f-b7b8-63e396470217" mode="Opaque" x="500" y="0" width="44" height="30" forecolor="#1F1B1B" hTextAlign="Center" vTextAlign="Middle" style="Style1">
 				<expression><![CDATA[$F{enabled} ? "Yes" : "No"]]></expression>
 				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="59c778fc-8b35-4768-bdcb-e02c0c479180"/>
 			</element>
-			<element kind="textField" uuid="ad313585-11b0-4e86-9690-87048d3f1061" x="0" y="0" width="60" height="30" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="ad313585-11b0-4e86-9690-87048d3f1061" mode="Opaque" x="0" y="0" width="60" height="30" forecolor="#1F1B1B" hTextAlign="Center" vTextAlign="Middle" style="Style1">
 				<expression><![CDATA[$F{id}]]></expression>
 				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="af6b1dbf-9667-455e-8d54-c801cd7b6108"/>
 			</element>
